# SkinDisease

./: .env.example  .gitignore  README.md  predictor.py  pyproject.toml
core/: admin.py  consts.py  models.py  urls.py
core/fixtures/: skin_condition.json
core/migrations/: 0001_initial.py  0002_skincondition.py  0003_diagnosisrequest.py  0004_diagnosisresult.py  0005_medicalverification.py  0006_diagnosisrequest_responsible_and_more.py  0007_remove_diagnosisrequest_responsible.py
core/serializers/: __init__.py  auth.py  diagnosis_request.py  diagnosis_result.py  medical_verification.py  skin_condition.py  user.py
core/views/: __init__.py  auth.py  diagnosis_request.py  diagnosis_result.py  medical_verification.py  skin_condition.py  user.py
project/: asgi.py  settings.py  urls.py  wsgi.py
project/settings/: base.py  database.py  drf_spectacular.py  rest_framework.py
tests/: conftest.py
tests/core/diagnosis_request/: fixtures.py  test_diagnosis_request.py
tests/core/user/: test_auth.py  test_user_crud.py
